--- a/index.html
+++ b/index.html
@@ -3,92 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Data Science Portfolio</title>
+    <title>Data Science Portfolio</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
         }
 
         body {
-            line-height: 1.6;
-            color: #333;
+            line-height: 1.5;
+            color: #1d1d1f;
+            background-color: #f5f5f7;
+            -webkit-font-smoothing: antialiased;
         }
 
         .header {
-            background: #2c3e50;
-            color: white;
+            background: #fff;
+            color: #1d1d1f;
             text-align: center;
-            padding: 2rem;
+            padding: 4rem 2rem;
+            margin-bottom: 2rem;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
 
         .section {
-            padding: 2rem;
-            margin: 1rem auto;
-            max-width: 1200px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 3rem 2rem;
+            margin: 2rem auto;
+            max-width: 1000px;
+            background: #fff;
+            border-radius: 20px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
+        }
+
+        .section:hover {
+            transform: translateY(-2px);
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 3.5rem;
+            font-weight: 700;
             margin-bottom: 1rem;
+            letter-spacing: -0.5px;
         }
 
         h2 {
-            color: #2c3e50;
+            font-size: 2rem;
+            color: #1d1d1f;
+            margin-bottom: 2rem;
+            font-weight: 600;
+            letter-spacing: -0.3px;
+        }
+
+        h3 {
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: #1d1d1f;
             margin-bottom: 1rem;
-            border-bottom: 2px solid #2c3e50;
-            padding-bottom: 0.5rem;
+        }
+
+        p {
+            font-size: 1.1rem;
+            color: #515154;
+            margin-bottom: 1rem;
+            line-height: 1.6;
         }
 
         .experience-item, .project-item {
-            margin-bottom: 1.5rem;
-            padding: 1rem;
-            background: #f8f9fa;
-            border-radius: 4px;
+            margin-bottom: 2.5rem;
+            padding: 2rem;
+            background: #fafafa;
+            border-radius: 16px;
+            border: 1px solid #e5e5e7;
+            transition: all 0.3s ease;
+        }
+
+        .experience-item:hover, .project-item:hover {
+            background: #fff;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
         }
 
         .tools-list {
             display: flex;
             flex-wrap: wrap;
             gap: 1rem;
+            margin-top: 1.5rem;
         }
 
         .tool-item {
-            background: #e9ecef;
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
+            background: #f5f5f7;
+            color: #1d1d1f;
+            padding: 0.75rem 1.25rem;
+            border-radius: 100px;
+            font-size: 0.95rem;
+            border: 1px solid #e5e5e7;
+            transition: all 0.3s ease;
+        }
+
+        .tool-item:hover {
+            background: #fff;
+            transform: translateY(-1px);
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
         .contact-form {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 1.5rem;
             max-width: 600px;
-            margin: 0 auto;
+            margin: 2rem auto 0;
         }
 
         input, textarea {
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            padding: 1rem;
+            border: 1px solid #e5e5e7;
+            border-radius: 12px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            font-family: inherit;
+        }
+
+        input:focus, textarea:focus {
+            outline: none;
+            border-color: #0071e3;
+            box-shadow: 0 0 0 3px rgba(0,113,227,0.1);
         }
 
         button {
-            background: #2c3e50;
+            background: #0071e3;
             color: white;
-            padding: 0.5rem 1rem;
+            padding: 1rem 2rem;
             border: none;
-            border-radius: 4px;
+            border-radius: 100px;
+            font-size: 1rem;
+            font-weight: 500;
             cursor: pointer;
+            transition: all 0.3s ease;
         }
 
         button:hover {
-            background: #34495e;
+            background: #0077ED;
+            transform: translateY(-1px);
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 1rem 0;
+        }
+
+        li {
+            margin-bottom: 1rem;
+            color: #515154;
+            position: relative;
+            padding-left: 1.5rem;
+        }
+
+        li:before {
+            content: '•';
+            color: #0071e3;
+            position: absolute;
+            left: 0;
+            font-weight: bold;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2.5rem;
+            }
+
+            h2 {
+                font-size: 1.75rem;
+            }
+
+            .section {
+                padding: 2rem 1.5rem;
+                margin: 1rem;
+            }
+
+            .experience-item, .project-item {
+                padding: 1.5rem;
+            }
         }
     </style>
 </head>
